@@ -1,6 +1,6 @@
 /* aide, Advanced Intrusion Detection Environment
  *
- * Copyright (C) 1999-2007,2010-2013 Rami Lehti, Pablo Virolainen, Mike
+ * Copyright (C) 1999-2007,2010-2013,2016 Rami Lehti, Pablo Virolainen, Mike
  * Markley, Richard van den Berg, Hannes von Haugwitz
  * $Header$
  *
@@ -767,15 +767,17 @@ int db_writespec_file(db_config* dbconf)
   
 #endif
 
-  retval=dofprintf(
-		 "# This file was generated by Aide, version %s\n"
-		 "# Time of generation was %.4u-%.2u-%.2u %.2u:%.2u:%.2u\n",
-		 AIDEVERSION,
-		 st->tm_year+1900, st->tm_mon+1, st->tm_mday,
-		 st->tm_hour, st->tm_min, st->tm_sec
-		 );
-  if(retval==0){
-    return RETFAIL;
+  if(dbconf->database_add_metadata) {
+      retval=dofprintf(
+             "# This file was generated by Aide, version %s\n"
+             "# Time of generation was %.4u-%.2u-%.2u %.2u:%.2u:%.2u\n",
+             AIDEVERSION,
+             st->tm_year+1900, st->tm_mon+1, st->tm_mday,
+             st->tm_hour, st->tm_min, st->tm_sec
+             );
+      if(retval==0){
+        return RETFAIL;
+      }
   }
   if(dbconf->config_version){
     retval=dofprintf(
