@@ -3,6 +3,7 @@ Version 0.16 (NOT_YET_RELEASED)
 	* Compare database entries just once
 	* Added new root_prefix option
 	* Added new database_attrs option
+	* Add new database_add_metadata option
 	* Added new report_detailed_init option
 	* Added new report_base16 option
 	* Added new report_ignore_added_attrs option
