@@ -1,3 +1,6 @@
+2016-02-21 Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Add new 'database_add_metadata' option
+
 2016-02-20 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Add new 'report_quiet' option
 
